--- a/main.tex
+++ b/main.tex
@@ -2,9 +2,9 @@
 
 \usepackage[ngerman]{babel}
 
-\input{../../Headerfiles/Packages}
-\input{../../Headerfiles/Titles}
-\input{../../Headerfiles/Commands}
+\input{../Headerfiles/Packages}
+\input{../Headerfiles/Titles}
+\input{../Headerfiles/Commands}
 
 \setlength{\columnseprule}{0.5pt}
 \renewcommand{\baselinestretch}{1}
